<resources>
    <string name="app_name">PLANiT</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="a_project">A Project</string>
    <string name="a_task">A Task</string>
    <string name="parent_project">Parent Project *</string>
    <string name="project_title">Project Title *</string>
    <string name="due_date">Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="due_date_time">Due</string>
    <string name="time_display_info">Your Time Display Here</string>
    <string name="date_display_info">Your Date Display Here</string>
    <string name="pick_date">Pick Date</string>
    <string name="contact_text">Contact</string>
    <string name="tag_text">Tags</string>
    <string name="description_text">Description</string>
    <string name="pick_time">Pick Time</string>
    <string name="blocked_by">Blocked by</string>
    <string name="tasks">Tasks</string>

    <string name="view_activity_title">View</string>
    <string name="edit_activity_title">Edit</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="done_period">Done.</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="select_due_date_button_text">Select Due Date</string>
    <string name="select_due_time_button_text">Select Due Time</string>
    <string name="no_due_date_selected_text">Select Date</string>
    <string name="no_due_time_selected_text">Select Time</string>
    <string name="clear_due_text">Clear</string>
    <string name="task_title">Task Title *</string>
    <string name="size_label_text">Size</string>
    <string name="tiny_text">Tiny</string>
    <string name="small_text">Small</string>
    <string name="medium_text">Medium</string>
    <string name="large_text">Large</string>
    <string name="huge_text">Huge</string>
    <string name="low_text">Low</string>
    <string name="moderate_text">Moderate</string>
    <string name="high_text">High</string>
    <string name="critical_text">Critical</string>
    <string name="project_associated_label">Project *</string>
    <string name="create_project">New Project</string>
    <string name="create_task">New Task</string>
    <string name="create_tag">+ Add Tags</string>
    <string name="priority_label_text">Priority</string>
    <string name="tags_label_text">Tags</string>
    <string name="done_question_mark">Done?</string>
    <string name="nice_work">Nice work!</string>
    <string name="blocked">Blocked</string>
    <string name="indicator_progress">0.0%</string>
    <string name="no_due_date">No Due Date</string>

    <!-- Settings String -->
    <string name="settings_text">Settings</string>
    <string name="notification_header">Notifications</string>
    <string name="due_date_alert">Receive due date alerts</string>
    <string name="due_alert_on">Notifications for upcoming due dates is on. (coming soon)</string>
    <string name="due_alert_off">Notifications for upcoming due dates is off. (coming soon)</string>
    <string name="concentrate_remind">Receive concentrate on task reminders</string>
    <string name="concentrate_alert_on">Reminders to concentrate on tasks is on. (coming soon)</string>
    <string name="concentrate_alert_off">Reminders to concentrate on tasks is off. (coming soon)</string>

    <string name="tags_header">Tags</string>
    <string name="tags_settings_summary">Add \/ edit \/ delete tags. (coming soon)</string>
    <string name="tags_settings_title">Manage Tags</string>
    <string name="help_header">Help</string>
    <string name="developer_header">Developer</string>
    <string name="email_developer_summary">Thanks for trying out! 💖 (coming soon)</string>
    <string name="email_developer_title">Email feedback to developers</string>
    <string name="faq_settings_summary">FAQ (coming soon)</string>
    <string name="faq_settings_title">Frequently Asked Questions</string>
    <string name="demo_mode_title">Demonstration Mode</string>
    <string name="demo_mode_description_on">After relaunch, mock data will be restored.</string>
    <string name="demo_mode_description_off">After relaunch, user data will be displayed.</string>
    <string name="empty_recycler_1">No project to show here 🎐</string>
    <string name="empty_recycler_2">No task to show here 🎏</string>
    <string name="empty_tasks_recycler">Create a task now 🎯</string>
    <string name="empty_blocker_recycler">This task has no blocker 🎊</string>
    <string name="empty_tags_edit">No tag has been selected.</string>

    <string name="delete_task_button_text">DELETE TASK</string>
    <string name="delete_project_button_text">DELETE PROJECT</string>
    <string name="saved">Saved.</string>
    <string name="deleted">Deleted.</string>
    <string name="try_again">An error occurred, please try again.</string>

    <string name="empty_blocker_list">No task can block this one 😎</string>
    <string name="to_be_implemented">Coming soon!</string>
    <string name="developer_on">Hi developer!</string>
    <string name="developer_off">Developer menu is disabled.</string>
    <string name="turn_off_demo_mode_text">Please turn off demonstration mode from settings!</string>
</resources>