<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_screen">

    <PreferenceCategory app:title="@string/notification_header"
                        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="dueDateAlert"
            app:title="@string/due_date_alert"
            app:summaryOff="@string/due_alert_off"
            app:summaryOn="@string/due_alert_on"
            app:iconSpaceReserved="false"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="concentrateAlert"
            app:title="@string/concentrate_remind"
            app:summaryOff="@string/concentrate_alert_off"
            app:summaryOn="@string/concentrate_alert_on"
            app:iconSpaceReserved="false"
            app:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/tags_header"
        app:iconSpaceReserved="false">

        <Preference
            app:key="manageTag"
            app:title="@string/tags_settings_title"
            app:summary="@string/tags_settings_summary"
            app:iconSpaceReserved="false"
            android:widgetLayout="@layout/activity_settings_icon_layout_tag">
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/help_header"
        app:iconSpaceReserved="false">

        <Preference
            app:key="emailDeveloper"
            app:title="@string/email_developer_title"
            app:summary="@string/email_developer_summary"
            app:iconSpaceReserved="false"
            android:widgetLayout="@layout/activity_settings_icon_layout_email">
        </Preference>

        <Preference
            app:iconSpaceReserved="false"
            app:key="FAQ"
            app:summary="@string/faq_settings_summary"
            app:title="@string/faq_settings_title"
            android:widgetLayout="@layout/activity_settings_icon_layout_help">
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/developer_header"
        app:iconSpaceReserved="false"
        app:key="developer">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="demoMode"
            app:title="@string/demo_mode_title"
            app:summaryOff="@string/demo_mode_description_off"
            app:summaryOn="@string/demo_mode_description_on">
        </SwitchPreferenceCompat>

    </PreferenceCategory>


</PreferenceScreen>