<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditTaskActivity">

    <include
        android:id="@+id/include_edit_toolbar"
        layout="@layout/activity_toolbar_edit" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_edit_toolbar"
        app:layout_constraintVertical_bias="0.0"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/title_margin"
            android:layout_marginRight="@dimen/title_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_margin"
                android:hint="@string/task_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id = "@+id/til_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_task_title"
                android:layout_marginTop="@dimen/title_margin"
                app:layout_constraintTop_toTopOf="parent"
                style = "@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/act_projects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/parent_project" />
        </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/size_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_project"
                android:layout_marginTop="@dimen/title_margin"
                android:text="@string/size_label_text"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/size_chips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/size_label"
                app:singleSelection="true"
                app:selectionRequired="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/tiny_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiny_text"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/small_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/small_text"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/medium_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium_text"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/large_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/huge_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huge_text"/>
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/priority_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/size_chips"
                android:layout_marginTop="@dimen/title_margin"
                android:text="@string/priority_label_text"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/priority_chips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/priority_label"
                app:singleSelection="true"
                app:selectionRequired="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/low_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low_text"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/moderate_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderate_text"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/high_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high_text"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/critical_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/critical_text"/>
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/tags_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/priority_chips"
                android:layout_marginTop="@dimen/title_margin"
                android:text="@string/tags_label_text"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tag_chips"
                android:layout_width="match_parent"
                android:layout_below="@id/tags_label"
                app:chipSpacingVertical="2dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/empty_tags_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/empty_tags_hint_height"
                android:visibility="invisible"
                android:layout_below="@id/tags_label"
                android:gravity="center"
                android:text="@string/empty_tags_edit"
                android:textSize="@dimen/empty_tags_hint" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tag_chips"
                android:layout_marginTop="@dimen/title_margin"
                android:hint="@string/description_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/blockers_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descriptionText"
                android:layout_marginTop="@dimen/title_margin"
                android:text="@string/blocked_by"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/blockers"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/blockers_label"
                android:layout_marginBottom="@dimen/title_margin"
                android:overScrollMode="never"/>

            <TextView
                android:id="@+id/empty_blockers_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/empty_recycler_hint_height"
                android:layout_below="@id/blockers"
                android:lineSpacingMultiplier="1.3"
                android:visibility="visible"
                android:gravity="center"
                android:layout_marginTop="@dimen/description_margin"
                android:layout_marginLeft="@dimen/title_margin"
                android:layout_marginRight="@dimen/title_margin"
                android:text="@string/empty_blocker_list"
                android:textSize="@dimen/empty_recycler_hint" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/empty_blockers_text"
                android:layout_margin="@dimen/fab_margin">

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/delete_margin"
                    android:paddingHorizontal="@dimen/delete_button_font_padding_horizontal"
                    android:paddingVertical="@dimen/delete_button_font_padding_vertical"
                    android:text="@string/delete_task_button_text"
                    android:textSize="@dimen/delete_button_font_size"
                    android:textColor="?attr/colorError"
                    app:strokeColor="?attr/colorError"
                    app:rippleColor="?attr/colorError"
                    style="?attr/materialButtonOutlinedStyle" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>